3_kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: myapp
            servicePort: 8080
